# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_package_library(
    name = "robot",
    deps = [
        ":turtle_command_receiver",
        ":turtle_command_sender",
        ":turtle_constants",
        ":turtle_status_receiver",
        ":turtle_status_sender",
    ],
)

drake_cc_library(
    name = "turtle_constants",
    srcs = ["turtle_constants.cc"],
    hdrs = ["turtle_constants.h"],
    deps = [
        "//common:essential",
    ],
)

drake_cc_library(
    name = "turtle_command_receiver",
    srcs = ["turtle_command_receiver.cc"],
    hdrs = ["turtle_command_receiver.h"],
    deps = [
        ":turtle_constants",
        "//common:essential",
        "//lcmtypes:lcmtypes_drake_cc",
        "//systems/framework:leaf_system",
        "//systems/lcm:lcm_pubsub_system",
    ],
)

drake_cc_library(
    name = "turtle_command_sender",
    srcs = ["turtle_command_sender.cc"],
    hdrs = ["turtle_command_sender.h"],
    deps = [
        ":turtle_constants",
        "//common:essential",
        "//lcmtypes:lcmtypes_drake_cc",
        "//systems/framework:leaf_system",
    ],
)

drake_cc_library(
    name = "turtle_status_receiver",
    srcs = ["turtle_status_receiver.cc"],
    hdrs = ["turtle_status_receiver.h"],
    deps = [
        ":turtle_constants",
        "//common:essential",
        "//lcmtypes:lcmtypes_drake_cc",
        "//systems/framework:leaf_system",
    ],
)

drake_cc_library(
    name = "turtle_status_sender",
    srcs = ["turtle_status_sender.cc"],
    hdrs = ["turtle_status_sender.h"],
    deps = [
        ":turtle_constants",
        "//common:essential",
        "//lcmtypes:lcmtypes_drake_cc",
        "//systems/framework:leaf_system",
    ],
)


add_lint_tests()
